[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
num = { version = "0.4.0", default-features = false }
itertools = { version = "0.11.0", default-features = false }

plonky2_u32 = { git = "https://github.com/kay404/plonky2-u32", branch = "patch-1" }
plonky2_maybe_rayon = { git = "https://github.com/xiyu1984/plonky2" }
plonky2 = { git = "https://github.com/xiyu1984/plonky2" }
plonky2_field = { git = "https://github.com/xiyu1984/plonky2" }

serde = { version = "1.0", default-features = false, features = ["derive"] }
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
env_logger = "0.11.3"
log = "0.4.14"
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
opt-level = 3
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 0
